# milter-manager

./: .editorconfig  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  ChangeLog  INTRODUCTION.ja  Makefile.am  NEWS  NEWS.ja  NEWS.md  README  README.ja  README.md  Rakefile  TODO  Vagrantfile  autogen.sh  compose.yaml  configure.ac  coveralls.rb  docker-compose.yml  enum-types.mk  gpg_uid  gtk-doc.make  libmilter.pc.in  marshal.mk  meson-config.h.in  meson.build  meson_options.txt  milter-client.pc.in  milter-core.pc.in  milter-manager.pc.in  milter-manager.spec.in  milter-server.pc.in  ruby-milter-client.pc.in  ruby-milter-core.pc.in  ruby-milter-server.pc.in  ruby-milter.pc.in  (+1 more)
admin/: .autotest  Makefile.am  TODO
admin/config/: database.yml  environment.rb  routes.rb
admin/db/: .gitignore
admin/test/: run-test.sh  test_helper.rb
apt/: Makefile.am  build-deb.sh  build-in-chroot.sh  gpg-uid.sh  milter-manager-depended-packages  sign-repository.sh  update-repository.sh
binding/python/: Makefile.am  meson.build
binding/ruby/: .gitignore  Makefile.am  meson.build
data/defaults/: Makefile.am  debian.conf  freebsd.conf  meson.build  pkgsrc.conf  redhat.conf  redhat9.conf
data/packet/: Makefile.am  collect-packet.rb
doc/: .gitignore  Makefile.am  available-milters.rd  available-milters.rd.ja  configuration.rd  configuration.rd.ja  install-freebsd.rd.ja  install-options-to-centos.rd  install-options-to-centos.rd.ja  install-options-to-debian.rd  install-options-to-debian.rd.ja  install-options-to-freebsd.rd  install-options-to-freebsd.rd.ja  install-options-to-ubuntu.rd  install-options-to-ubuntu.rd.ja  install-to-centos.rd  install-to-centos.rd.ja  install-to-centos5.rd  install-to-centos5.rd.ja  install-to-centos6.rd  install-to-centos6.rd.ja  install-to-centos7.rd  install-to-centos7.rd.ja  install-to-debian.rd  install-to-debian.rd.ja  install-to-freebsd.rd  install-to-freebsd.rd.ja  install-to-others.rd  install-to-others.rd.ja  install-to-ubuntu.rd  install-to-ubuntu.rd.ja  install-ubuntu.rd.ja  install.rd  install.rd.ja  introduction.rd  introduction.rd.ja  log-list.rd  log-list.rd.ja  maintenance-policy.rd  maintenance-policy.rd.ja  (+42 more)
doc/reference/: .gitignore  Makefile.am  footer-dev-ja.html  footer-dev.html  footer-ja.html  footer.html  head-dev-ja.html  head-ja.html  head.html  header-dev-ja.html  header-dev.html  header-ja.html  header.html  ja.po  maintenance-policy.xml  maintenance-policy.xml.ja  milter-manager-docs.sgml  milter-manager-overrides.txt  milter-manager-sections.txt  milter-manager.signals  milter-manager.types  prepare-for-publishing.rb  sf-logo.html
gio-unix-compatible/gio/: Makefile.am  gio.h  gioenumtypes.c  gioenumtypes.h  gnetworkaddress.c  gobject-compatible.h  gsocket.c  gsocketaddress.c  gsocketcontrolmessage.c  gsrvtarget.c  gunixconnection.c  gunixconnection.h  gunixfdmessage.c
html/: .htaccess  Makefile.am  index.html  index.html.ja  milter-manager.css
html/blog/: tdiary.conf  tdiary.en.conf  tdiary.ja.conf  update.rb  upload.rb
libmilter/: Makefile.am  gi-docgen.toml.in  libmilter-compatible.c  libmilter-compatible.h  meson.build  mfapi.h  mfdef.h
milter-client/: Makefile.am  mc-marshalers.list  mc-parser.c  mc-parser.h  milter-client-context.c  milter-client-context.h  milter-client-handler.c  milter-client-handler.h  milter-client-marshalers.list  milter-client.c  milter-client.h
milter-core/: .gitignore  Makefile.am  milter-core.h  milter-decoder.c  milter-decoder.h  milter-encoder.c  milter-encoder.h  milter-handler.c  milter-handler.h  milter-marshalers.list  milter-option.c  milter-option.h  milter-parser.c  milter-parser.h  milter-protocol.h  milter-reader.c  milter-reader.h  milter-utils.c  milter-utils.h  milter-writer.c  milter-writer.h
milter-manager/: Makefile.am  milter-manager-configure.c  milter-manager-context.c  milter-manager-context.h  milter-manager-main.c  milter-manager.c  milter-manager.h
milter-server/: Makefile.am  milter-server-context.c  milter-server-context.h  milter-server.h
milter/client/: .gitignore  Makefile.am  gi-docgen.toml.in  meson.build  milter-client-context.c  milter-client-context.h  milter-client-main.c  milter-client-marshalers.list  milter-client-objects.h  milter-client-private.h  milter-client-runner.c  milter-client-runner.h  milter-client-single-thread-runner.c  milter-client-single-thread-runner.h  milter-client.c  milter-client.h
milter/core/: .gitignore  Makefile.am  enums.c.template  enums.h.template  gi-docgen.toml.in  meson.build  milter-agent.c  milter-agent.h  milter-command-decoder.c  milter-command-decoder.h  milter-command-encoder.c  milter-command-encoder.h  milter-connection.c  milter-connection.h  milter-core-internal.h  milter-core.c  milter-decoder.c  milter-decoder.h  milter-encoder.c  milter-encoder.h  milter-error-emittable.c  milter-error-emittable.h  milter-esmtp.c  milter-esmtp.h  milter-event-loop.c  milter-event-loop.h  milter-eventloop.c  milter-eventloop.h  milter-finished-emittable.c  milter-finished-emittable.h  milter-g-event-loop.c  milter-g-event-loop.h  milter-glib-compatible.c  milter-glib-compatible.h  milter-glib-event-loop.c  milter-glib-event-loop.h  milter-handler.c  milter-handler.h  milter-headers.c  milter-headers.h  (+38 more)
src/: .gitignore  Makefile.am  meson.build  milter-manager  milter-manager.c
test/: .gitignore  Makefile.am  run-test.sh  suite-milter-manager-test.c  test-configuration.c
test/client/: Makefile.am  test-client-context-address.c  test-client-context-base.c  test-client-context-body.c  test-client-context-data.c  (+8 more)
tool/: .gitignore  Makefile.am  meson.build  milter-log-tool  milter-log-tool.rb  milter-manager-log-analyzer  milter-performance-analyzer  milter-performance-check  milter-report-statistics  milter-test-client-libmilter.c  milter-test-client.c  milter-test-server.c
tools/: Makefile.am  milter-manager-test-milter.c
yum/: Makefile.am  build-in-chroot.sh  build-repository-rpm.sh  build-rpm.sh  gpg-uid.sh  milter-manager-repository.spec  milter-manager.repo  update-repository.sh
(+1412 files in other folders)
